<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.disciple.basedworld.cnchat.MainActivity"
    android:contextClickable="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chatView"
        android:visibility="visible">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/opts">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:gravity="center"
                    android:background="#3230BF8A"
                    android:id="@+id/power"
                    android:onClick="chatSessionStart"
                    android:textSize="12sp"
                    android:text="@string/power0"
                    android:fontFamily="sans-serif-light"
                    tools:targetApi="jelly_bean" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:gravity="center"
                    android:background="#32AA66FF"
                    android:id="@+id/config"
                    android:onClick="animation2"
                    android:textSize="12sp"
                    android:text="@string/settings"
                    android:fontFamily="sans-serif-light"
                    tools:targetApi="jelly_bean" />

            </TableRow>

        </TableLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/opts"
            android:layout_alignParentLeft="true"
            android:layout_above="@+id/tableLayout"
            android:id="@+id/scrollView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:id="@+id/stdOut"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textIsSelectable="true"
                android:text="@string/message0"
                android:textColor="#DF000000"
                android:textSize="16sp" />

        </ScrollView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/tableLayout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="4dp"
                android:paddingBottom="2dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textNoSuggestions|textVisiblePassword"
                    android:ems="10"
                    android:textColor="#DF000000"
                    android:id="@+id/textPane"
                    android:layout_gravity="top|left"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/hint"
                    android:paddingTop="4dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:textSize="20sp"
                    android:id="@+id/send"
                    android:layout_gravity="top|right"
                    android:textStyle="bold"
                    android:onClick="chatAction"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="1dp" />

            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/configView"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center"
                android:background="#32AA66FF"
                android:id="@+id/chat"
                android:onClick="animation1"
                android:textSize="12sp"
                android:text="@string/leaveSettings"
                android:fontFamily="sans-serif-light"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chat"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/help"
                android:textColor="#D0000000"
                android:textSize="16sp"
                tools:targetApi="jelly_bean" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/help"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/serverLabel"
                        android:textColor="#DF000000"
                        android:textSize="16sp"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="24dp">

                    <EditText
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:inputType="textNoSuggestions|textVisiblePassword"
                        android:ems="10"
                        android:textColor="#DF000000"
                        android:id="@+id/serverPref"
                        android:layout_gravity="center_vertical|left"
                        android:maxLines="1"/>

                    <Button
                        android:layout_weight="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:id="@+id/serverSave"
                        android:layout_gravity="center_vertical|right"
                        android:onClick="serverSave"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/customNameLabel"
                        android:textColor="#DF000000"
                        android:textSize="16sp"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="24dp">

                    <EditText
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:inputType="textNoSuggestions|textVisiblePassword"
                        android:ems="10"
                        android:textColor="#DF000000"
                        android:id="@+id/customNamePref"
                        android:layout_gravity="center_vertical|left"
                        android:maxLines="1"/>

                    <Button
                        android:layout_weight="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:id="@+id/customNameSave"
                        android:layout_gravity="center_vertical|right"
                        android:onClick="customNameSave"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="24dp">

                    <Switch
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:switchPadding="16dp"
                        android:text="@string/markdown"
                        android:textColor="#DF000000"
                        android:textSize="16sp"
                        android:checked="false"
                        android:id="@+id/markdownPref"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="12dp">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/errLogLabel"
                        android:textColor="#DF000000"
                        android:layout_gravity="center_vertical"
                        android:textSize="16sp"/>

                    <Button
                        android:layout_weight="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show"
                        android:id="@+id/errLogShow"
                        android:layout_gravity="center_vertical|right"
                        android:onClick="errLogShow"/>

                    <Button
                        android:layout_weight="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear"
                        android:id="@+id/errLogClear"
                        android:layout_gravity="center_vertical|right"
                        android:onClick="errLogClear"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/errLogContainer"
                    android:background="#23EC153F"
                    android:visibility="gone">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:id="@+id/errLog"
                        android:text=""
                        android:textColor="#DF000000"
                        android:textSize="12sp"
                        android:typeface="monospace"/>

                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
